flux/apps/nextcloud/whiteboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-whiteboard
  namespace: default
spec:
  selector:
    matchLabels:
      app: nextcloud-whiteboard
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud-whiteboard
    spec:
      containers:
        - name: nextcloud-whiteboard
          image: ghcr.io/nextcloud-releases/whiteboard:v1.5.7
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              # memory: 100Mi
          ports:
            - containerPort: 3002
