flux/apps/nextcloud/whiteboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-whiteboard
  namespace: default
spec:
  selector:
    app: nextcloud-whiteboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
