flux/apps/nextcloud/whiteboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-whiteboard-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ncw.arlodev.co.uk`)
      kind: Rule
      services:
        - name: nextcloud-whiteboard
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-whiteboard-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ncw.arlodev.co.uk`)
      kind: Rule
      services:
        - name: nextcloud-whiteboard
          port: 80
  tls:
    secretName: cert-nextcloud-whiteboard
